Add JavaFX version as main game entry